Find rental points tree